fixed project box size

--- a/index.HTML
+++ b/index.HTML
@@ -50,7 +50,7 @@
       <hr>
       <section class="projects">
         <h3>My Projects</h3>
-        <div class="projBox">
+        <div class="projBox proj1">
           <h5>Coming soon</h5>
         </div>
         <div class="projBox">
