--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section class="projects">
         <h3>My Projects</h3>
         <div class="projBox proj1">
-          <a href="https://alla0810.github.io/Group9/">Amazon Navigator</a>
+          <a href="https://alla0810.github.io/Group9/">Amazon Navigator!</a>
         </div>
         <div class="projBox">
           <h5>Coming soon</h5>
