added second project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a href="https://alla0810.github.io/Group9/">Amazon Navigator!</a>
         </div>
         <div class="projBox">
-          <h5>Coming soon</h5>
+          <a href="https://github.com/MicahDeaton/Never-Travel-Board">Never Travel Board</a>
         </div>
         <div class="projBox">
           <h5>Coming soon</h5>
